added images to buttons

--- a/public-danny/index.html
+++ b/public-danny/index.html
@@ -19,16 +19,69 @@
                     <a href="/">
                         <div>
                             <div class="resource-btn btn">
-                                <div class="btn-header">RESOURCE LIBRARY</div>
-                                <div class="btn-description">A library of resources to support your learning</div>
+                                <div class="btn-text-container">
+                                    <div class="btn-header">RESOURCE LIBRARY</div>
+                                    <div class="btn-description">A library of resources to support your learning</div>
+                                </div>
+                                <div class="img-box">
+                                    <img src="../assets/images/Music.png" alt="graph-icon">
+                                </div>
                             </div>
                         </div>
                     </a>
                 </li>
-                <li><a href="/"><div class="open-bar-btn btn"><div class="btn-header">OPEN BAR</div> <div class="btn-description">Chat about anything. There's no rules in the Open Bar!</div></div> </a></li>
-                <li><a href="/"><div class="back-end-btn btn"><div class="btn-header">BACK-END CHAT</div> <div class="btn-description">JS, Databases, APIs and everything in between.</div></div> </a></li>
-                <li><a href="/"><div class="front-end-btn btn"><div class="btn-header">FRONT-END CHAT</div> <div class="btn-description">From CSS and HTML all the way to Frameworks, we've got you covered.</div></div> </a></li>
-                <li><a href="/"><div class="ui-ux-btn btn"><div class="btn-header">UI / UX &amp; DESIGN CHAT</div> <div class="btn-description">Delve deep into the design experience with those in the know!</div></div> </a></li>
+                <li>
+                    <a href="/">
+                        <div class="open-bar-btn btn">
+                            <div class="btn-text-container">
+                                <div class="btn-header">OPEN BAR</div>
+                                <div class="btn-description">Chat about anything. There's no rules in the Open Bar!</div>
+                            </div>
+                            <div class="img-box">
+                                <img src="../assets/images/People.png" alt="graph-icon">
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="/">
+                        <div class="back-end-btn btn">
+                            <div class="btn-text-container">
+                                <div class="btn-header">BACK-END CHAT</div>
+                                <div class="btn-description">JS, Databases, APIs and everything in between.</div>
+                            </div>
+                            <div class="img-box">
+                                <img src="../assets/images/Graph.png" alt="graph-icon">
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="/">
+                        <div class="front-end-btn btn">
+                            <div class="btn-text-container">
+                                <div class="btn-header">FRONT-END CHAT</div>
+                                <div class="btn-description">From CSS and HTML all the way to Frameworks, we've got you covered.</div>
+                            </div>
+                            <div class="img-box">
+                                <img src="../assets/images/Front_end.png" alt="graph-icon">
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="/">
+                        <div class="ui-ux-btn btn">
+                            <div class="btn-text-container">
+                                <div class="btn-header">UI / UX &amp; DESIGN CHAT</div>
+                                <div class="btn-description">Delve deep into the design experience with those in the know!</div>
+                            </div>
+                            <div class="img-box">
+                                <img src="../assets/images/People.png" alt="graph-icon">
+                            </div>
+                        </div>
+                    </a>
+                </li>
             </ul>
     </main>
     <footer></footer>
