resource and fun-stuff html

--- a/public-danny/resource-library.html
+++ b/public-danny/resource-library.html
@@ -11,30 +11,15 @@
     <nav></nav>
     <main>
         <div id="welcome-box">
-            <h1>WELCOME TO STUDY BUDDY!</h1>
+            <h1 class="resource-header">RESOURCE LIBRARY</h1>
             <p>Below you will find some open study rooms where you can find new study buddies. Or, if you want to find some resources to supplement your learning, check our the Resource Library</p>
         </div>
             <ul>
                 <li>
-                    <a href="resource-library.html">
-                        <div>
-                            <div class="resource-btn btn">
-                                <div class="btn-text-container">
-                                    <div class="btn-header">RESOURCE LIBRARY</div>
-                                    <div class="btn-description">A library of resources to support your learning</div>
-                                </div>
-                                <div class="img-box">
-                                    <img src="../assets/images/Music.png" alt="graph-icon">
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </li>
-                <li>
                     <a href="/">
                         <div class="open-bar-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">OPEN BAR</div>
+                                <div class="btn-header">FUN STUFF</div>
                                 <div class="btn-description">Chat about anything. There's no rules in the Open Bar!</div>
                             </div>
                             <div class="img-box">
@@ -47,7 +32,7 @@
                     <a href="/">
                         <div class="back-end-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">BACK-END CHAT</div>
+                                <div class="btn-header">BACK-END</div>
                                 <div class="btn-description">JS, Databases, APIs and everything in between.</div>
                             </div>
                             <div class="img-box">
@@ -60,7 +45,7 @@
                     <a href="/">
                         <div class="front-end-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">FRONT-END CHAT</div>
+                                <div class="btn-header">FRONT-END</div>
                                 <div class="btn-description">From CSS and HTML all the way to Frameworks, we've got you covered.</div>
                             </div>
                             <div class="img-box">
@@ -73,7 +58,7 @@
                     <a href="/">
                         <div class="ui-ux-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">UI / UX &amp; DESIGN CHAT</div>
+                                <div class="btn-header">UI / UX &amp; DESIGN</div>
                                 <div class="btn-description">Delve deep into the design experience with those in the know!</div>
                             </div>
                             <div class="img-box">
