--- a/public-danny/fun-stuff.html
+++ b/public-danny/fun-stuff.html
@@ -16,14 +16,15 @@
         </div>
             <ul>
                 <li>
-                    <a href="/">
+                    <a href="https://www.youtube.com/watch?v=Djz6sfWGmgM">
                         <div class="open-bar-btn btn">
                             <div class="btn-text-container">
                                 <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
-                                <div class="btn-description"></div>
+                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
+                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/People.png" alt="graph-icon">
+                                <img src="../assets/resources/rude-dog.png" alt="resource-image">
                             </div>
                         </div>
                     </a>
@@ -32,8 +33,9 @@
                     <a href="/">
                         <div class="back-end-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">BACK-END</div>
-                                <div class="btn-description">JS, Databases, APIs and everything in between.</div>
+                                <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
+                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
+                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
                                 <img src="../assets/images/Graph.png" alt="graph-icon">
@@ -45,8 +47,9 @@
                     <a href="/">
                         <div class="front-end-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">FRONT-END</div>
-                                <div class="btn-description">From CSS and HTML all the way to Frameworks, we've got you covered.</div>
+                                <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
+                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
+                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
                                 <img src="../assets/images/Front_end.png" alt="graph-icon">
@@ -58,8 +61,9 @@
                     <a href="/">
                         <div class="ui-ux-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">UI / UX &amp; DESIGN</div>
-                                <div class="btn-description">Delve deep into the design experience with those in the know!</div>
+                                <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
+                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
+                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
                                 <img src="../assets/images/People.png" alt="graph-icon">
