--- a/public-danny/resource-library.html
+++ b/public-danny/resource-library.html
@@ -16,7 +16,7 @@
         </div>
             <ul>
                 <li>
-                    <a href="/">
+                    <a href="fun-stuff.html">
                         <div class="open-bar-btn btn">
                             <div class="btn-text-container">
                                 <div class="btn-header">FUN STUFF</div>
