--- a/public-danny/resource-library.html
+++ b/public-danny/resource-library.html
@@ -8,7 +8,13 @@
     <title>Study Buddy App</title>
 </head>
 <body>
-    <nav></nav>
+    <nav>
+        <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
+        <div id="user-info">
+            <p id="username">User_777</p>
+            <div id="profile-pic">U</div>
+        </div>
+    </nav>
     <main>
         <div id="welcome-box">
             <h1 class="resource-header">RESOURCE LIBRARY</h1>
@@ -29,7 +35,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/">
+                    <a href="back-end.html">
                         <div class="back-end-btn btn">
                             <div class="btn-text-container">
                                 <div class="btn-header">BACK-END</div>
@@ -42,7 +48,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/">
+                    <a href="front-end.html">
                         <div class="front-end-btn btn">
                             <div class="btn-text-container">
                                 <div class="btn-header">FRONT-END</div>
@@ -55,7 +61,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/">
+                    <a href="ui-ux.html">
                         <div class="ui-ux-btn btn">
                             <div class="btn-text-container">
                                 <div class="btn-header">UI / UX &amp; DESIGN</div>
