--- a/public-danny/back-end.html
+++ b/public-danny/back-end.html
@@ -17,34 +17,20 @@
     </nav>
     <main>
         <div id="welcome-box">
-            <h1>WELCOME TO STUDY BUDDY!</h1>
+            <h1 class="resource-header">BACK END RESOURCES</h1>
             <p>Below you will find some open study rooms where you can find new study buddies. Or, if you want to find some resources to supplement your learning, check our the Resource Library</p>
         </div>
             <ul>
                 <li>
-                    <a href="resource-library.html">
-                        <div>
-                            <div class="resource-btn btn">
-                                <div class="btn-text-container">
-                                    <div class="btn-header">RESOURCE LIBRARY</div>
-                                    <div class="btn-description">A library of resources to support your learning</div>
-                                </div>
-                                <div class="img-box">
-                                    <img src="../assets/images/Music.png" alt="graph-icon">
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="/">
+                    <a href="https://www.youtube.com/watch?v=Djz6sfWGmgM">
                         <div class="open-bar-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">OPEN BAR</div>
-                                <div class="btn-description">Chat about anything. There's no rules in the Open Bar!</div>
+                                <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
+                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
+                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/People.png" alt="graph-icon">
+                                <img src="../assets/resources/rude-dog.png" alt="resource-image">
                             </div>
                         </div>
                     </a>
@@ -53,8 +39,9 @@
                     <a href="/">
                         <div class="back-end-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">BACK-END CHAT</div>
-                                <div class="btn-description">JS, Databases, APIs and everything in between.</div>
+                                <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
+                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
+                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
                                 <img src="../assets/images/Graph.png" alt="graph-icon">
@@ -66,8 +53,9 @@
                     <a href="/">
                         <div class="front-end-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">FRONT-END CHAT</div>
-                                <div class="btn-description">From CSS and HTML all the way to Frameworks, we've got you covered.</div>
+                                <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
+                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
+                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
                                 <img src="../assets/images/Front_end.png" alt="graph-icon">
@@ -79,8 +67,9 @@
                     <a href="/">
                         <div class="ui-ux-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">UI / UX &amp; DESIGN CHAT</div>
-                                <div class="btn-description">Delve deep into the design experience with those in the know!</div>
+                                <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
+                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
+                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
                                 <img src="../assets/images/People.png" alt="graph-icon">
