--- a/public-danny/fun-stuff.html
+++ b/public-danny/fun-stuff.html
@@ -8,7 +8,13 @@
     <title>Study Buddy App</title>
 </head>
 <body>
-    <nav></nav>
+    <nav>
+        <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
+        <div id="user-info">
+            <p id="username">User_777</p>
+            <div id="profile-pic">U</div>
+        </div>
+    </nav>
     <main>
         <div id="welcome-box">
             <h1 class="resource-header">FUN STUFF</h1>
