--- a/public-danny/fun-stuff.html
+++ b/public-danny/fun-stuff.html
@@ -44,7 +44,7 @@
                                 <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Graph.png" alt="graph-icon">
+                                <img src="../assets/resources/rude-dog.png" alt="resource-image">
                             </div>
                         </div>
                     </a>
@@ -58,7 +58,7 @@
                                 <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/Front_end.png" alt="graph-icon">
+                                <img src="../assets/resources/rude-dog.png" alt="resource-image">
                             </div>
                         </div>
                     </a>
@@ -72,7 +72,7 @@
                                 <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/People.png" alt="graph-icon">
+                                <img src="../assets/resources/rude-dog.png" alt="resource-image">
                             </div>
                         </div>
                     </a>
