updated Resource Library page styling

--- a/public-danny/resource-library.html
+++ b/public-danny/resource-library.html
@@ -16,9 +16,10 @@
         </div>
     </nav>
     <main>
-        <div id="welcome-box">
+        <div id="resource-box">
+            <img class="resource-header-image" src="../assets/images/Hand.png" alt="resources main image">
             <h1 class="resource-header">RESOURCE LIBRARY</h1>
-            <p>Below you will find some open study rooms where you can find new study buddies. Or, if you want to find some resources to supplement your learning, check our the Resource Library</p>
+            <p>Our Resource Library has relies on you, the user so please share all of your favourite resources for everyone to enjoy!</p>
         </div>
             <ul>
                 <li>
@@ -29,7 +30,7 @@
                                 <div class="btn-description">Chat about anything. There's no rules in the Open Bar!</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/People.png" alt="graph-icon">
+                                <img src="../assets/images/Music.png" alt="graph-icon">
                             </div>
                         </div>
                     </a>
@@ -68,7 +69,7 @@
                                 <div class="btn-description">Delve deep into the design experience with those in the know!</div>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/images/People.png" alt="graph-icon">
+                                <img src="../assets/images/Pencil.png" alt="graph-icon">
                             </div>
                         </div>
                     </a>
