front-end page styling updated

--- a/public-danny/front-end.html
+++ b/public-danny/front-end.html
@@ -16,9 +16,10 @@
         </div>
     </nav>
     <main>
-        <div id="welcome-box">
-            <h1 class="resource-header">FRONT END RESOURCES</h1>
-            <p>Below you will find some open study rooms where you can find new study buddies. Or, if you want to find some resources to supplement your learning, check our the Resource Library</p>
+        <div id="resource-box">
+            <img class="resource-header-image" src="../assets/images/Front_end.png" alt="resources main image">
+            <h1 class="resource-header">FRONT-END RESOURCES</h1>
+            <p>Browse the resources listed below and discover new ways to take your front-end skills to the next level!</p>
         </div>
             <ul>
                 <li>
