updated UI UX resources page styling

--- a/public-danny/ui-ux.html
+++ b/public-danny/ui-ux.html
@@ -16,9 +16,10 @@
         </div>
     </nav>
     <main>
-        <div id="welcome-box">
-            <h1 class="resource-header">UI &amp; UX RESOURCES</h1>
-            <p>Below you will find some open study rooms where you can find new study buddies. Or, if you want to find some resources to supplement your learning, check our the Resource Library</p>
+        <div id="resource-box">
+            <img class="resource-header-image" src="../assets/images/Pencil.png" alt="resources main image">
+            <h1 class="resource-header">UI &amp; UX DESIGN RESOURCES</h1>
+            <p>Everything you could ever want to know about user interfaces and experience is contained in the resource list below!</p>
         </div>
             <ul>
                 <li>
