added Fun Resources page styling

--- a/public-danny/fun-stuff.html
+++ b/public-danny/fun-stuff.html
@@ -16,9 +16,10 @@
         </div>
     </nav>
     <main>
-        <div id="welcome-box">
-            <h1 class="resource-header">FUN STUFF</h1>
-            <p>Below you will find some open study rooms where you can find new study buddies. Or, if you want to find some resources to supplement your learning, check our the Resource Library</p>
+        <div id="resource-box">
+            <img class="resource-header-image" src="../assets/images/Music.png" alt="resources main image">
+            <h1 class="resource-header">FUN RESOURCES</h1>
+            <p>Your fellow users have been busy sharing all of their favourite fun resources from across the web. Browse the links below and wind down with after a hard day of coding!</p>
         </div>
             <ul>
                 <li>
