added back button to pages

--- a/public-danny/front-end.html
+++ b/public-danny/front-end.html
@@ -17,6 +17,9 @@
     </nav>
     <main>
         <div id="resource-box">
+            <div class="back-link-box">
+                <a href="resource-library.html">❮ Back</a>
+            </div>
             <img class="resource-header-image" src="../assets/images/Front_end.png" alt="resources main image">
             <h1 class="resource-header">FRONT-END RESOURCES</h1>
             <p>Browse the resources listed below and discover new ways to take your front-end skills to the next level!</p>
