--- a/public-danny/fun-stuff.html
+++ b/public-danny/fun-stuff.html
@@ -17,8 +17,11 @@
     </nav>
     <main>
         <div id="resource-box">
+            <div class="back-link-box">
+                <a href="resource-library.html">❮ Back</a>
+            </div>
             <img class="resource-header-image" src="../assets/images/Music.png" alt="resources main image">
-            <h1 class="resource-header">FUN RESOURCES</h1>
+            <h1 class="resource-header">FUN STUFF</h1>
             <p>Your fellow users have been busy sharing all of their favourite fun resources from across the web. Browse the links below and wind down with after a hard day of coding!</p>
         </div>
             <ul>
