--- a/public-danny/resource-library.html
+++ b/public-danny/resource-library.html
@@ -17,6 +17,9 @@
     </nav>
     <main>
         <div id="resource-box">
+            <div class="back-link-box">
+                <a href="index.html">❮ Back</a>
+            </div>
             <img class="resource-header-image" src="../assets/images/Hand.png" alt="resources main image">
             <h1 class="resource-header">RESOURCE LIBRARY</h1>
             <p>Our Resource Library has relies on you, the user so please share all of your favourite resources for everyone to enjoy!</p>
