--- a/public-danny/ui-ux.html
+++ b/public-danny/ui-ux.html
@@ -17,6 +17,9 @@
     </nav>
     <main>
         <div id="resource-box">
+            <div class="back-link-box">
+                <a href="resource-library.html">❮ Back</a>
+            </div>
             <img class="resource-header-image" src="../assets/images/Pencil.png" alt="resources main image">
             <h1 class="resource-header">UI &amp; UX DESIGN RESOURCES</h1>
             <p>Everything you could ever want to know about user interfaces and experience is contained in the resource list below!</p>
