updated resource library copy

--- a/public-danny/resource-library.html
+++ b/public-danny/resource-library.html
@@ -22,7 +22,7 @@
             </div>
             <img class="resource-header-image" src="../assets/images/Hand.png" alt="resources main image">
             <h1 class="resource-header">RESOURCE LIBRARY</h1>
-            <p>Our Resource Library has relies on you, the user so please share all of your favourite resources for everyone to enjoy!</p>
+            <p>Our Resource Library relies on our users, like you! So please share all of your favourite links for everyone to enjoy.</p>
         </div>
             <ul>
                 <li>
