--- a/public-danny/fun-stuff.html
+++ b/public-danny/fun-stuff.html
@@ -8,21 +8,11 @@
     <title>Study Buddy App</title>
 </head>
 <body>
-    <nav>
-        <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
-        <div id="user-info">
-            <p id="username">User_777</p>
-            <div id="profile-pic">U</div>
-        </div>
-    </nav>
+    <nav></nav>
     <main>
-        <div id="resource-box">
-            <div class="back-link-box">
-                <a href="resource-library.html">❮ Back</a>
-            </div>
-            <img class="resource-header-image" src="../assets/images/Music.png" alt="resources main image">
+        <div id="welcome-box">
             <h1 class="resource-header">FUN STUFF</h1>
-            <p>Your fellow users have been busy sharing all of their favourite fun resources from across the web. Browse the links below and wind down with after a hard day of coding!</p>
+            <p>Below you will find some open study rooms where you can find new study buddies. Or, if you want to find some resources to supplement your learning, check our the Resource Library</p>
         </div>
             <ul>
                 <li>
@@ -40,43 +30,43 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/">
+                    <a href="https://cssbattle.dev/">
                         <div class="back-end-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
-                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
+                                <div class="btn-header">"Cascading Style Sheets Battle: Where Pixels and Pizzazz Collide!"</div>
+                                <div class="btn-description">Welcome to our favourite quirkiest online showdown in the digital universe! In the exhilarating world of Cascading Style Sheets Battle, you're not just battling code; you're fighting for pixel perfection and ultimate supremacy.</div>
                                 <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/resources/rude-dog.png" alt="resource-image">
+                                <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2Ff4MfHUyh.jpg" alt="graph-icon">
                             </div>
                         </div>
                     </a>
                 </li>
                 <li>
-                    <a href="/">
+                    <a href="https://www.laughfactory.com/jokes">
                         <div class="front-end-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
-                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
+                                <div class="btn-header">“JOKE OF THE DAY”</div>
+                                <div class="btn-description">Welcome to 'JOKE of the Day' - the daily dose of laughter you didn't know you needed! </div>
                                 <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/resources/rude-dog.png" alt="resource-image">
+                                <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2FR3NsSPkh.jpg" alt="graph-icon">
                             </div>
                         </div>
                     </a>
                 </li>
                 <li>
-                    <a href="/">
+                    <a href="https://mytuner-radio.com/radio/country/united-kingdom/genre/comedy-stations">
                         <div class="ui-ux-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">MY FAVOURITE STUDY TUNES</div>
-                                <div class="btn-description">Here are a few of my favourite tunes to share.</div>
+                                 <div class="btn-header">"Radio Rascals: Where Laughter Takes the Airwaves!" </div>
+                                <div class="btn-description">"Welcome to Radio Rascals, the station that's here to tickle your eardrums and your funny bone simultaneously!</div>
                                 <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="../assets/resources/rude-dog.png" alt="resource-image">
+                                <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2FRCnkT2Hh.jpg" alt="graph-icon">
                             </div>
                         </div>
                     </a>
