updated fun stuff alt test

--- a/public-danny/fun-stuff.html
+++ b/public-danny/fun-stuff.html
@@ -8,11 +8,6 @@
     <title>Study Buddy App</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <nav></nav>
-    <main>
-        <div id="welcome-box">
-=======
     <nav>
         <a href="index.html"><img id="logo" src="../assets/images/study-buddy-logo-2.png" alt="study buddy logo"></a>
         <div id="user-info">
@@ -26,7 +21,6 @@
                 <a href="resource-library.html">❮ Back</a>
             </div>
             <img class="resource-header-image" src="../assets/images/Music.png" alt="resources main image">
->>>>>>> f600b80ee7caad837dc93bf5b905ac664c77bb63
             <h1 class="resource-header">FUN STUFF</h1>
             <p>Below you will find some open study rooms where you can find new study buddies. Or, if you want to find some resources to supplement your learning, check our the Resource Library</p>
         </div>
@@ -54,7 +48,7 @@
                                 <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
                             </div>
                             <div class="img-box">
-                                <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2Ff4MfHUyh.jpg" alt="graph-icon">
+                                <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2Ff4MfHUyh.jpg" alt="css-battle-icon">
                             </div>
                         </div>
                     </a>
