--- a/public-danny/back-end.html
+++ b/public-danny/back-end.html
@@ -16,9 +16,13 @@
         </div>
     </nav>
     <main id="main">
-        <div id="welcome-box">
+        <div id="resource-box">
+            <div class="back-link-box">
+                <a href="resource-library.html">❮ Back</a>
+            </div>
+            <img class="resource-header-image" src="../assets/images/Graph.png" alt="resources main image">
             <h1 class="resource-header">BACK END RESOURCES</h1>
-            <p>Below you will find some open study rooms where you can find new study buddies. Or, if you want to find some resources to supplement your learning, check our the Resource Library</p>
+            <p>Everything you could ever want to know about user interfaces and experience is contained in the resource list below!</p>
         </div>
             <ul>
                 <li>
