fun stuff copy update

--- a/public-danny/fun-stuff.html
+++ b/public-danny/fun-stuff.html
@@ -43,9 +43,9 @@
                     <a href="https://cssbattle.dev/">
                         <div class="back-end-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">"Cascading Style Sheets Battle: Where Pixels and Pizzazz Collide!"</div>
+                                <div class="btn-header">CSS BATTLE: Where Pixels and Pizzazz Collide!</div>
                                 <div class="btn-description">Welcome to our favourite quirkiest online showdown in the digital universe! In the exhilarating world of Cascading Style Sheets Battle, you're not just battling code; you're fighting for pixel perfection and ultimate supremacy.</div>
-                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
+                                <p class="owner-text">Submitted by: <span class="resource-owner">Jasim</span></p>
                             </div>
                             <div class="img-box">
                                 <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2Ff4MfHUyh.jpg" alt="css-battle-icon">
@@ -57,9 +57,9 @@
                     <a href="https://www.laughfactory.com/jokes">
                         <div class="front-end-btn btn">
                             <div class="btn-text-container">
-                                <div class="btn-header">“JOKE OF THE DAY”</div>
+                                <div class="btn-header">JOKE OF THE DAY</div>
                                 <div class="btn-description">Welcome to 'JOKE of the Day' - the daily dose of laughter you didn't know you needed! </div>
-                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
+                                <p class="owner-text">Submitted by: <span class="resource-owner">Olivia</span></p>
                             </div>
                             <div class="img-box">
                                 <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2FR3NsSPkh.jpg" alt="graph-icon">
@@ -71,9 +71,9 @@
                     <a href="https://mytuner-radio.com/radio/country/united-kingdom/genre/comedy-stations">
                         <div class="ui-ux-btn btn">
                             <div class="btn-text-container">
-                                 <div class="btn-header">"Radio Rascals: Where Laughter Takes the Airwaves!" </div>
+                                 <div class="btn-header">RADIO RASCALS</div>
                                 <div class="btn-description">"Welcome to Radio Rascals, the station that's here to tickle your eardrums and your funny bone simultaneously!</div>
-                                <p class="owner-text">Submitted by: <span class="resource-owner">Danny</span></p>
+                                <p class="owner-text">Submitted by: <span class="resource-owner">Martina</span></p>
                             </div>
                             <div class="img-box">
                                 <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fi.imgur.com%2FRCnkT2Hh.jpg" alt="graph-icon">
